<!--
  ~  Created by Rohan Maity on 11/1/21 3:19 PM
  ~  Copyright (c) 2021 . All rights reserved.
  ~  Last modified 11/1/21 3:12 PM
  -->

<resources>
    <string name="app_name">ConfX</string>

    // Networking
    <string name="network_could_not_connect">Could not able to connect, Please try again</string>
    <string name="network_time_out_occurred">Timeout occurred</string>
    <string name="network_internet_not_connected">Not Connected to Internet, Please try again</string>
    <string name="could_not_refresh">Could not refresh</string>

    // Navigation Things
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="nav_tweets">Tweets</string>
    <string name="nav_archive">Archives</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="nav_alerts">Alerts</string>
    <string name="nav_change_theme">Change Theme</string>
    <string name="nav_about">About</string>
    <string name="nav_up_coming">Up Coming</string>


    // banner topic titles
    <string name="jvm_universe_label">JVM Universe</string>
    <string name="js_land_label">JS Land</string>
    <string name="cloud_devops_label">Cloud and DevOps</string>
    <string name="design_label">Design</string>
    <string name="mobile_dev_label">Mobile Development</string>


    <string name="tech_conf_sub">Tech conferences for %1$s around the world</string>

    // tech conf sub values
    <string name="devops_devs">cloud and devops devs</string>
    <string name="mobile_devs">mobile devs</string>
    <string name="design_folks">UX/UI folks</string>
    <string name="jvm_folks">java folks</string>
    <string name="js_devs">JS devs</string>

    // upcoming
    <string name="upcoming_events">Up Coming Events</string>

    // splash
    <string name="splash_subtext">global conferences information at one place</string>

    // event details
    <string name="conference_details">Conference Details</string>
    <string name="go_to_site">Go to site</string>
    <string name="conference_days">Conference Days</string>
    <string name="call_for_proposals">Call for proposals</string>
    <string name="cfp_end_date_label">End Date</string>
    <string name="go_to_cfp_url">Go to CFP URL</string>

    <string name="search_hint">Search by conference title</string>
    <string name="sorry_no_conferences_search">Sorry, no recent conferences found</string>
    <string name="check_archive">You might like to check out Archives</string>

    //general
    <string name="retry">Retry</string>
    <string name="sorry_no_conferences">Sorry, no conferences found</string>
    <string name="done_label">Done</string>
    <string name="choose_topics">Choose Topics</string>
    <string name="no_topics_set_for_alerts">No topics set for alerts</string>
    <string name="alerts_info_header">Alerts are set for following</string>
    <string name="channel_name">Events Alerts</string>
    <string name="channel_description">Alerts for user selected topics</string>
    <string name="bookmarks_all">All</string>
    <string name="no_cfp_text">No CFP reminders set</string>
    <string name="no_bookmarks_text">No bookmarks set</string>
    <string name="bookmarks_cfp">CFP</string>
    <string name="new_alerts_title">Up coming events</string>
    <string name="monthly_alerts_title">Up coming events this month</string>
    <string name="new_conferences">New conferences are here</string>
    <string name="conferences_that_might_interests">Conferences that might interests you</string>
    <string name="set">Set</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="set_day">Set Day</string>
    <string name="set_time">Set Time</string>
    <string name="cfp_reminder">CFP Reminder</string>
    <string name="cancel_reminder">Cancel Current Reminder ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="follow_system">Follow System</string>
    <string name="confx_about_info">ConfX is Unofficial Companion app for Conf.tech</string>
    <string name="by_rotbolt_labs">By RotBolt Labs</string>

    <string-array name="quotes">
        <item>"The best thing about a boolean is even if you are wrong, you are only off by a bit"</item>
        <item>"There are two ways to write error-free programs; only the third one works" - Alan J. Perlis</item>
        <item>"It’s not a bug – it’s an undocumented feature."</item>
        <item>"Deleted code is debugged code." - Jeff Sickel</item>
        <item>"If debugging is the process of removing software bugs, then programming must be the process of putting them in." - Edsger Dijkstra</item>
        <item>Software undergoes beta testing shortly before it’s released. Beta is Latin for "still doesn’t work". </item>
        <item>In order to understand recursion, one must first understand recursion. </item>
        <item>“Truth can only be found in one place: the code.” - Robert C. Martin</item>
        <item>“What one programmer can do in one month, two programmers can do in two months.” - Fred Brooks</item>
        <item>“Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.” - Patrick McKenzie</item>
    </string-array>

</resources>